OrangeFox-CI: Fix typo

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,7 +16,7 @@ task:
   name: "Recovery Build"
   timeout_in: 120m
   container:
-      image: ghcr.io/xenontheinertg/docker:latest
+      image: ghcr.io/xenontheinertg/docky:latest
       cpu: 8
       memory: 20G
 
