--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -19,16 +19,23 @@ task:
       image: ghcr.io/xenontheinertg/docky:latest
       cpu: 8
       memory: 20G
+      
+  Clone_repo:
+      - https://github.com/XenonTheInertG-CI/OrangeFox-CI
 
   Checks_script:
-      - curl -sL https://raw.githubusercontent.com/XenonTheInertG-CI/OrangeFox-CI/scripts/checks.sh | bash
+      - cd OrangeFox-CI
+      - ./OrangeFox-CI/scripts/checks.sh
 
   Sync_script:
-      - curl -sL https://raw.githubusercontent.com/XenonTheInertG-CI/OrangeFox-CI/scripts/sync.sh | bash
+      - cd OrangeFox-CI
+      - ./OrangeFox-CI/scripts/sync.sh
 
   Build_script:
-      - curl -sL https://raw.githubusercontent.com/XenonTheInertG-CI/OrangeFox-CI/scripts/build.sh | bash
+      - cd OrangeFox-CI
+      - ./OrangeFox-CI/scripts/build.sh
 
   Upload_script:
       - export TIMEOUT=43200 # Link timeout (in minutes)
-      - curl https://raw.githubusercontent.com/XenonTheInertG-CI/OrangeFox-CI/scripts/upload.sh | bash
+      - cd OrangeFox-CI
+      - ./OrangeFox-CI/scripts/upload.sh
