--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,29 +13,22 @@ env:
     CIRRUS_SHELL: bash
 
 task:
-  name: "Recovery Build"
+  name: "OrangeFox CI"
   timeout_in: 120m
   container:
       image: ghcr.io/xenontheinertg/docky:latest
       cpu: 8
       memory: 20G
       
-  Clone_repo:
-      - https://github.com/XenonTheInertG-CI/OrangeFox-CI
-
   Checks_script:
-      - cd OrangeFox-CI
-      - ./OrangeFox-CI/scripts/checks.sh
+      - curl -sL https://raw.githubusercontent.com/XenonTheInertG-CI/OrangeFox-CI/main/scripts/checks.sh | bash
 
   Sync_script:
-      - cd OrangeFox-CI
-      - ./OrangeFox-CI/scripts/sync.sh
+      - curl -sL https://raw.githubusercontent.com/XenonTheInertG-CI/OrangeFox-CI/main/scripts/sync.sh | bash
 
   Build_script:
-      - cd OrangeFox-CI
-      - ./OrangeFox-CI/scripts/build.sh
+      - curl -sL https://raw.githubusercontent.com/XenonTheInertG-CI/OrangeFox-CI/main/scripts/build.sh | bash
 
   Upload_script:
       - export TIMEOUT=43200 # Link timeout (in minutes)
-      - cd OrangeFox-CI
-      - ./OrangeFox-CI/scripts/upload.sh
+      - curl -sL https://raw.githubusercontent.com/XenonTheInertG-CI/OrangeFox-CI/main/scripts/upload.sh | bash
